--- a/Turbocharged.Vault/Turbocharged.Vault.csproj
+++ b/Turbocharged.Vault/Turbocharged.Vault.csproj
@@ -38,7 +38,7 @@
     <Compile Include="AppIdAuthentication.cs" />
     <Compile Include="Lease.cs" />
     <Compile Include="IAuthentication.cs" />
-    <Compile Include="VaultSealedException.cs" />
+    <Compile Include="VaultException.cs" />
     <Compile Include="VaultClient.cs" />
     <Compile Include="SealStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
