--- a/src/Turbocharged.Vault/Turbocharged.Vault.csproj
+++ b/src/Turbocharged.Vault/Turbocharged.Vault.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Mount.cs" />
+    <Compile Include="UserPassAuthentication.cs" />
     <Compile Include="TokenAuthentication.cs" />
     <Compile Include="AppIdAuthentication.cs" />
     <Compile Include="Lease.cs" />
