Add Get/Set/DeletePolicy methods

--- a/src/Turbocharged.Vault.Tests/Turbocharged.Vault.Tests.csproj
+++ b/src/Turbocharged.Vault.Tests/Turbocharged.Vault.Tests.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
+    <Compile Include="VaultClientPolicyFacts.cs" />
     <Compile Include="VaultClientFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
